--- a/index.html
+++ b/index.html
@@ -1,30 +1,42 @@
+
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Botão</title>
-<style>
-    h1{
-     color: red
-     ;
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>contadores</title>
+  <!-- <style>
+    button{
+      width: 10rem;
+      height: 5rem;
+      font-size: 4rem;
+      background-color: red;
+      color: blueviolet;
     }
-</style>
-  </head>
-  <body>
-    <h1>Contador</h1>
-    <button onclick="adicionar()"></button>
-    <script>
-      var numero = 0;
+  </style> -->
+</head>
+<body>
+  <h1 style="color: red;">contadores</h1>
+  <button onclick = "adicionar()">0</button>
 
-      function adicionar() {
-        numero++;
-        render();
-      }
+  <script>
+    var numero = 0;
 
-      function render() {
-        document.querySelector("button").innerText = numero;
-      }
-
+    function adicionar() {
+     
+      numero++;
+      console.log("1");
       render();
-    </script>
-  </body>
+    } 
+
+    function render() {
+      document.querySelector("button").innerText ="Total"+numero;
+      console.log("2");
+
+    }
+
+    render();
+  </script>
+
+</body>
 </html>
